--- a/packages/react-frontend/public/index.html
+++ b/packages/react-frontend/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1"
